<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/etDirectorFullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/director_full_name"
        android:inputType="textCapWords"
        android:importantForAutofill="no" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <Button
            android:id="@+id/btnDirectorDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/delete_button"
            style="@style/Widget.AppCompat.Button.Borderless.Colored" />

        <Button
            android:id="@+id/btnCancelDialogDirector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel_button"
            style="@style/Widget.AppCompat.Button.Borderless.Colored" />

        <Button
            android:id="@+id/btnDirectorSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save_button"
            style="@style/Widget.AppCompat.Button.Borderless.Colored" />

    </LinearLayout>
</LinearLayout>